add linked list feature
